@@ -1,4 +1,9 @@
 2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
+	* server-src/amindexd.c: main(): replace strappend() usage with a
+	  temporary variable and g_free()/g_strconcat(); push down local
+	  variable "part"
+
+2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
 	* server-src/amcheck.c: start_host(): replace strappend() usage with a
 	  GString; also, remove unneeded local variables and introduce another
 	  GString to build the request
